@@ -4,6 +4,8 @@
 	from control/2 as the first case; this was a regression introduced in
 	revision r692.
 
+	* src/core/exmpp_stanza.erl, src/core/exmpp_message.erl: Style.
+
 2009-01-13  Pablo Polvorin  <pablo.polvorin@process-one.net>
 
 	* src/core/exmpp_xml.erl: Use exmpp_known_elems:elem_as_list/1 in
